[package]
name = "kodekku"
version = "0.3.0"
description = "Tool for getting codec info about video files."
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
ffmpeg-next = "6"
walkdir = "2"
