[package]
name = "kodekku"
version = "0.3.0"
description = "Tool for getting codec info about video files."
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap-verbosity-flag = "2"
colored = "2"
ffmpeg-next = "6"
walkdir = "2"
